--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME="Consumir API"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ysAATBQyfaVDYMGY9aBHhUADkgFx8yqAIMaiYDVFEqE=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=sqlite
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -42,3 +42,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SKYDATARADIOS_BASE_URI=http://apirestfulskydata.test
+SKYDATARADIOS_CLIENT_ID=7
+SKYDATARADIOS_CLIENT_SECRET=5lKDkwjO6oRxButjDDl3ilNk89LltSzendSRfswy
+SKYDATARADIOS_PASSWORD_CLIENT_ID=8
+SKYDATARADIOS_PASSWORD_CLIENT_SECRET=1Li4ZZMUBEs7pjmLjD7CuF6S5DT0BHVZprSm0N9o
