Coneccion de API desde Heroku

--- a/.env.example
+++ b/.env.example
@@ -43,8 +43,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SKYDATARADIOS_BASE_URI=http://apirestfulskydata.test
-SKYDATARADIOS_CLIENT_ID=7
-SKYDATARADIOS_CLIENT_SECRET=5lKDkwjO6oRxButjDDl3ilNk89LltSzendSRfswy
+SKYDATARADIOS_BASE_URI=http://apirestfulskydata.herokuapp.com
+SKYDATARADIOS_CLIENT_ID=1
+SKYDATARADIOS_CLIENT_SECRET=lYTS5gajvUd5XC7lPb5PGgq4tfSEjFoCkKBMmtek
 SKYDATARADIOS_PASSWORD_CLIENT_ID=8
 SKYDATARADIOS_PASSWORD_CLIENT_SECRET=1Li4ZZMUBEs7pjmLjD7CuF6S5DT0BHVZprSm0N9o
